welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:14: error: expected start of definition
	override def run() { 
                 ^Methods:22: error: Unmatched closing brace '}' ignored here
}
^